--- a/client/core/public/index.html
+++ b/client/core/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="display:flex;">
     <head>
         <meta charset="utf-8" />
         <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png" />
@@ -10,7 +10,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1,user-scalable=0"/>
         <title>Typescript MERN Starter</title>
     </head>
-    <body>
+    <body style="width:100%;">
         <noscript>You need to enable TypeScript to run this app.</noscript>
         <div id="root" style="height: 100%;"></div>
     </body>
